--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "chessground",
-  "version": "7.6.2",
+  "version": "7.2.10",
   "description": "lichess.org Chess UI",
   "main": "chessground.js",
   "typings": "chessground.d.ts",
   "directories": {},
   "dependencies": {},
   "devDependencies": {
-    "browserify": "^16",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4",
-    "gulp-size": "^3",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.1",
-    "tsify": "^4",
-    "typescript": "^3",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2",
-    "watchify": "^3.11.0"
+    "browserify": "^14",
+    "gulp": "^3",
+    "gulp-sourcemaps": "^2",
+    "gulp-typescript": "^3",
+    "gulp-uglify": "^3",
+    "gulp-util": "^3",
+    "tsify": "^3",
+    "typescript": "^2.6",
+    "uglify-js": "^3",
+    "vinyl-buffer": "^1",
+    "vinyl-source-stream": "^1",
+    "watchify": "^3"
   },
   "scripts": {
     "pretest": "npm run compile",
