--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,15 @@
   "compilerOptions": {
     "outDir": "./",
     "declaration": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
     "noUnusedLocals": true,
     "noEmitOnError": false,
     "removeComments": true,
+    "alwaysStrict": true,
     "noImplicitReturns": true,
+    "noImplicitThis": true,
     "noUnusedParameters": true,
-    "target": "es5",
-    "strict": true
+    "target": "es5"
   }
 }
